# spacedrive

./: pnpm-lock.yaml
apps/cli/: Cargo.toml
apps/mobile/: .eslintrc.js  package.json  tailwind.config.js
apps/mobile/ios/: Podfile
apps/mobile/ios/Spacedrive.xcodeproj/: project.pbxproj
apps/mobile/src/: App.tsx
apps/mobile/src/components/drawer/: DrawerLibraryManager.tsx  DrawerLocations.tsx
apps/mobile/src/components/form/: Switch.tsx
apps/mobile/src/components/layout/: Card.tsx  Dialog.tsx  Modal.tsx
apps/mobile/src/components/menu/: SortByMenu.tsx
apps/mobile/src/components/modal/inspector/: ActionsModal.tsx
apps/mobile/src/components/modal/tag/: UpdateTagModal.tsx
apps/mobile/src/components/settings/: SettingsContainer.tsx  SettingsItem.tsx
apps/mobile/src/constants/style/: Colors.js  Colors.ts  tailwind.js
apps/mobile/src/hooks/: useTheme.ts
apps/mobile/src/lib/: tailwind.ts
apps/mobile/src/navigation/: TabNavigator.tsx
apps/mobile/src/screens/: Search.tsx  Spacedrop.tsx
apps/mobile/src/screens/onboarding/: MasterPassword.tsx  NewLibrary.tsx  Privacy.tsx
core/: Cargo.toml
core/src/location/: file_path_helper.rs  mod.rs
core/src/location/manager/watcher/: utils.rs
